--- a/app/assets/stylesheets/_main.sass
+++ b/app/assets/stylesheets/_main.sass
@@ -13,10 +13,13 @@ body
   @media screen and (max-width: $break-small)
     height: 210px !important
 
-.ui.items 
+.ui.items
   padding-top: 5px
   > .item
     min-height: 260px
     width: 215px
-em
-  color: red
+.ui.items .item>.content>.name
+  font-size: 1em
+  em
+    color: red
+
