--- a/app/assets/stylesheets/_main.sass
+++ b/app/assets/stylesheets/_main.sass
@@ -7,12 +7,17 @@ body
   .ui.menu.views
     margin-bottom: 0px
 .ui.sidebar.left
+  background-color: #57102C
   width: 240px !important
 .ui.top.sidebar
-  height: 130px !important
+  background-color: #57102C
+    height: 50px !important
   @media screen and (max-width: $break-small)
-    height: 210px !important
-
+    height: 110px !important
+.ui.icon.button.search
+  @media screen and (max-width: $break-small)
+    visibility: hidden
+    display: none
 .ui.items
   padding-top: 5px
   > .item
