--- a/app/views/partials/_search.haml
+++ b/app/views/partials/_search.haml
@@ -1,7 +1,10 @@
-%form#search.ui.form.segment.sidebar.top.icon.input{onsubmit: 'return false'} 
-  .two.fields
-    .field
-      %input.search{placeholder: "Enter a start point here...", type: "text", name:"from"}/
-    .field
-      %input.search{placeholder: "Enter a destination point here...", type: "text", name:"to"}/
-  .ui.teal.small.submit.button.search Submit
+.ui.form.sidebar.top.icon.input{onsubmit: 'return false'} 
+  %form#search
+    .three.fields
+      .field
+        %input.search{placeholder: "Enter a start point here...", type: "text", name:"from"}/
+      .field
+        %input.search{placeholder: "Enter a destination point here...", type: "text", name:"to"}/
+      .field
+        .ui.icon.button.search
+          %i.icon.settings
