--- a/app/views/partials/_sidebar.haml
+++ b/app/views/partials/_sidebar.haml
@@ -1,6 +1,6 @@
 .ui.sidebar.vertical.menu.left
   .ui.basic.vertical.accordion.menu
-    %item.results
+    .item.results
       27 Results
     .item
       %a.active.title
@@ -51,4 +51,4 @@
                 %label Blue
 
       
-      .item.ui.button.teal.search_open Search Again !
+  .ui.button.teal.search_open Search Again !
